# david8

./: .gitignore  LICENSE  README.md  mkdocs.yml  psrecord_report.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  wiki-improvement.md
.github/workflows/: ci_cd.yml  docs.yml  trigger_dialect_test.yml
benchmarks/: select_david8.py  select_pypika.py  select_sqlalchemy.py  simple_select.md  simple_select_david8.py  simple_select_peewee.py  simple_select_pypika.py  simple_select_sqlalchemy.py  test_benchmarks.py  test_select_benchmarks.py  test_simple_select_benchmarks.py
david8/: __init__.py  _base_query_builder.py  agg_functions.py  dialects.py  expressions.py  fn_generator.py  frames.py  functions.py  functions_pg_duck.py  joins.py  logical_operators.py  param_styles.py  predicates.py
david8/_core/: base_dml.py  base_params.py  base_query_builder.py
david8/_dml/: base_select.py
david8/_protocols/: dml.py  query_builder.py  sql_statement.py
david8/core/: arg_convertors.py  base_aliased.py  base_ddl.py  base_dialect.py  base_dml.py  base_dql.py  base_expressions.py  base_frames.py  base_join.py  base_params.py  base_query.py  base_query_builder.py  base_select.py  columns.py  dialects.py  expressions.py  fn_generator.py  logical_operators.py  predicates.py  sql_1999_join.py  sql_92_join.py
david8/protocols/: ddl.py  dialect.py  dml.py  query_builder.py  sql.py  sql_statement.py
docs/: custom_expressions.md  ddl.md  dml.md  dql.md  functions.md  index.md  predicates.md  source_definitions.md
docs/clickhouse/: ddl.md  dql.md  functions.md  index.md  manipulating_partitions.md
docs/duckdb/: dml.md  dql.md  functions.md  index.md  sql_statements.md
docs/postgresql/: dml.md  functions.md  index.md
overrides/partials/: copyright.html
tests/: base_test.py  test_agg_functions.py  test_base_query_builder.py  test_create_view.py  test_delete.py  test_dialects.py  test_drop_table.py  test_expressions.py  test_functions.py  test_functions_pg_duck.py  test_group_by.py  test_insert.py  test_join.py  test_logical_operators.py  test_order_by.py  test_predicates.py  test_select.py  test_union.py  test_update.py  test_where.py  test_where_predicates.py  test_with_select.py
